--- a/index.html
+++ b/index.html
@@ -14,10 +14,41 @@
     <!-- Fontawesome CSS -->
     <link rel="stylesheet" href="fontawesome/css/all.css">
 
-    <title>Hello, world!</title>
+    <title>Finans - Finanças Pessoais</title>
   </head>
   <body>
+    <header>
+      <nav class="navbar navbar-expand-sm navbar-light bg-warning">
+        <div class="container">
+          <a href="#" class="navbar-brand">
+            <img src="imagens/logo.png" width="142">
+          </a>
+          <button class="navbar-toogler" data-toogle="collapse" data-target="#nav-principal"> 
+            <span class="navbar-toogler-icon"></span>
+          </button>
 
+        <div iid="nav-principal" class="collapse navbar-collapse">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Recursos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Benefícios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Preços</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn btn-outline-light ml-4" href="">Entrar</a>
+            </li>
+          </ul>
+        </div>
+        </div>
+      </nav>
+    </header>
 
 
     <div> <!--SCRIPTS-->
