--- a/index.html
+++ b/index.html
@@ -17,38 +17,41 @@
     <title>Finans - Finanças Pessoais</title>
   </head>
   <body>
-    <header>
+    <header><!--INÍCIO CABEÇALHO-->
       <nav class="navbar navbar-expand-sm navbar-light bg-warning">
         <div class="container">
+          
           <a href="#" class="navbar-brand">
             <img src="imagens/logo.png" width="142">
           </a>
-          <button class="navbar-toogler" data-toogle="collapse" data-target="#nav-principal"> 
-            <span class="navbar-toogler-icon"></span>
+
+          <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
+            <span class="navbar-toggler-icon"></span>
           </button>
 
-        <div iid="nav-principal" class="collapse navbar-collapse">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Recursos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Benefícios</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Preços</a>
-            </li>
-            <li class="nav-item">
-              <a class="btn btn-outline-light ml-4" href="">Entrar</a>
-            </li>
-          </ul>
-        </div>
+          <div class="collapse navbar-collapse" id="nav-principal">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a href="" class="nav-link">Home</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Recursos</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Benefícios</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Preços</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="btn btn-outline-light ml-4">Entrar</a>
+              </li>
+            </ul>
+          </div>
+
         </div>
       </nav>
-    </header>
+    </header><!--FIM CABEÇALHO-->
 
 
     <div> <!--SCRIPTS-->
