--- a/index.html
+++ b/index.html
@@ -53,6 +53,42 @@
       </nav>
     </header><!--FIM CABEÇALHO-->
 
+    <section id="home">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 d-flex">
+            <div class="align-self-center ">
+              <h1 class="display-4">Suas contas, descomplicadas</h1>
+              <p>
+                Usado por mais de 1 milhão de pessoas, o Finans é uma ferramenta online que vai facilitar a sua vida financeira.
+              </p>
+              <form class="mt-3">
+                <div class="input-group input-group-lg">
+                  <input type="text" name="" id="" placeholder="Seu E-mail" class="form-control">
+                  <div class="input-group-append">
+                    <button class="btn btn-primary">
+                      Cadastre-se
+                    </button>
+                  </div>
+                </div>
+              </form>
+              <p class="mt-2">Disponível para
+                <a href="" class="btn btn-outline-light">
+                  <i class="fab fa-android fa-lg"></i>
+                </a> 
+                <a href="" class="btn btn-outline-light">
+                  <i class="fab fa-apple fa-lg"></i>
+                </a>
+
+              </p>
+            </div>
+          </div>
+          <div class="col-md-6 d-none d-md-block">
+            <img src="imagens/capa-mulher.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
 
     <div> <!--SCRIPTS-->
         <!-- Optional JavaScript -->
