--- a/index.html
+++ b/index.html
@@ -90,6 +90,108 @@
       </div>
     </section>
 
+    <section class="caixa">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 d-flex">
+            <div class="align-self-center">
+              <h2>Saiba para onde vai o seu dinheiro</h2>
+              <p>
+                Com o Finans, você categoriza todos os seus lançamentos.
+                Com gráficos simples, você sabe de onde vem e para onde vai o seu dinheiro.
+              </p>
+              <a href="" class="btn btn-primary">Veja Mais</a>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <img class="img-fluid" src="imagens/saiba.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="caixa">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img class="img-fluid" src="imagens/juros.png" alt="">
+          </div>
+          <div class="col-md-6 d-flex">
+            <div class="align-self-center">
+              <h2>Pare de pagar juros e economize!</h2>
+              <p>
+                Manter as contas em dia é sempre um problema? O Finans avisa você: receba alertas de contas
+                a pagar e a receber.
+              </p>
+              <a href="" class="btn btn-primary">Veja Mais</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="caixa">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <img src="imagens/facil.png" class="img-fluid" alt="">
+            <h4>Fácil de usar</h4>
+            <p>
+              O Finans vai além do básico e permite que você faça controles incríveis, essenciais para as suas finanças.
+              Simples como tem que ser!
+            </p>
+          </div>
+          <div class="col-md-4">
+            <img src="imagens/economize.png" class="img-fluid" alt="">
+            <h4>Economize seu tempo</h4>
+            <p>
+              Tempo é dinheiro! Em segundos, você tem tudo sob controle para aproveitar o tempo com o que realmente para você!
+            </p>
+          </div>
+          <div class="col-md-4">
+            <img src="imagens/suporte.png" class="img-fluid" alt="">
+            <h4>Suporte amigo</h4>
+            <p>
+              Duvidas? Perguntas? Nosso suporte super legal ajudará você! Nós estamos aqui para resolver seus problemas
+              e deixar a sua vida bem mais fácil!
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="mt-4 mb-4">
+      <div class="container">
+        <div class="row ">
+          <div class="col-md-8">
+            <p>
+              <a href="">Home</a>
+              <a href="">Recursos</a>
+              <a href="">Benefícios</a>
+              <a href="">Preços</a>
+            </p>
+          </div>
+          <div class="col-md-4 d-flex justify-content-end">
+            <a href="" class="btn btn-outline-dark">
+              <i class="fab fa-facebook-square fa-lg"></i>
+            </a>
+            <a href="" class="btn btn-outline-dark ml-2">
+              <i class="fab fa-twitter-square fa-lg"></i>
+            </a>
+            <a href="" class="btn btn-outline-dark ml-2">
+              <i class="fab fa-instagram fa-lg"></i>
+            </a>
+            <a href="" class="btn btn-outline-dark ml-2">
+              <i class="fab fa-linkedin fa-lg"></i>
+            </a>
+          </div>
+          <h6 class="m-auto">&copy; 2021 - <a href="http://www.rabsystems.com.br" target="_blank">RabSystems</a></h4>
+        </div>
+      </div>
+    </footer>
+
+    
+
     <div> <!--SCRIPTS-->
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
